[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/Pawns/pawn_purple.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pawn.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Pawns/selected_shade.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 20.4965

[node name="Pawn" type="Area2D"]
scale = Vector2( 0.65, 0.65 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Shade" type="Sprite" parent="."]
visible = false
position = Vector2( 2.33821, 3.39208 )
scale = Vector2( 0.22, 0.22 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
[connection signal="input_event" from="." to="." method="_on_Pawn_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_Pawn_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Pawn_mouse_exited"]
